完善数据库的实现